--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         </div>
 
     	<p>
-        ColoSSI are going for a journey, want to join?
+        ColoSSI are going on a journey. Come and join us.
     	</p>
       <p>
-        Jump on the board of <a href="https://argo.colossi.network">Argo</a>
+        Jump onboard <a href="https://argo.colossi.network">Argo</a>
       </p>
 
 
