--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
         ColoSSI are going on a journey. Come and join us.
     	</p>
       <p>
-        Jump onboard <a href="https://argo.colossi.network">Argo</a>
+        <a href="https://dkms.colossi.network">DKMS</a>
       </p>
-
+      <p>
+        <a href="https://oca.colossi.network">OCA</a>
+      </p>	      
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
